Function created consuming 2 srt files and returning a result file

--- a/SubMerge/SubMerge.Console.csproj
+++ b/SubMerge/SubMerge.Console.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Model\**" />
+    <EmbeddedResource Remove="Model\**" />
+    <None Remove="Model\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SubMerge.Engine\SubMerge.Engine.csproj" />
   </ItemGroup>
 
@@ -21,10 +27,6 @@
     <None Update="Files\en.srt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\" />
   </ItemGroup>
 
 </Project>
