--- a/SubMerge.Func/SubMerge.Func.csproj
+++ b/SubMerge.Func/SubMerge.Func.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+	  <PublishReadyToRun>true</PublishReadyToRun>
+	  <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
