--- a/.github/workflows/GenericFuntionApp.yml
+++ b/.github/workflows/GenericFuntionApp.yml
@@ -4,14 +4,14 @@ on:
     branches:
     - features/az-function
 env:
-  AZURE_FUNCTIONAPP_NAME: SubMergeFunctions
+  AZURE_FUNCTIONAPP_NAME: GenericFuntionApp
   AZURE_FUNCTIONAPP_PACKAGE_PATH: SubMerge.Func/publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: SubMerge.Func
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -28,5 +28,5 @@ jobs:
       uses: Azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        publish-profile: ${{ secrets.SubMergeFunctions_4596 }}
+        publish-profile: ${{ secrets.GenericFuntionApp_87b5 }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
