Some unit tests for engine

--- a/Console/SubMerge/SubMerge.Console.csproj
+++ b/Console/SubMerge/SubMerge.Console.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SubMerge.Engine\SubMerge.Engine.csproj" />
+    <ProjectReference Include="..\..\SubMerge.Engine\SubMerge.Engine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
